--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@heroicons/react": "^2.2.0",
     "@nextui-org/react": "^2.6.11",
     "@tanstack/react-query": "^5.67.3",
-    "axios": "^1.8.2",
+    "axios": "^1.8.3",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
