testing game igdbApiService

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 # VITE_RAWG_API_KEY=1b0695244c5f4ad787e7d026c8122c7c
 IGDB_CLIENT_ID=z8na058rv1vxsof4i4sfl9bige9prm
 IGDB_CLIENT_SECRET=n07ak55tolyt71882b6826gtj0p807
+VITE_IGDB_CLIENT_ID=z8na058rv1vxsof4i4sfl9bige9prm
+VITE_IGDB_CLIENT_SECRET=n07ak55tolyt71882b6826gtj0p807
 
 
 
